errors no longer shift the form on show

--- a/react-app/src/components/login-signup/login-signup.css
+++ b/react-app/src/components/login-signup/login-signup.css
@@ -34,13 +34,15 @@
     margin-right: 50px;
 }
 
-.mapped-errors {
-    color: red;
+.errors-container{
+    margin-bottom: 10px;
 }
 
-.signup-container {
-    margin-left: 50px;
+.mapped-errors {
+    color: red;
+    max-width: 270px;
 }
+
 
 .vertical-separator-container {
     display: flex;
@@ -66,6 +68,10 @@
     height: 290px;
     position: absolute;
     top: 220px;
+}
+
+.signup-container {
+    margin-left: 50px;
 }
 
 .first-last-name-container {
